feat: add ResourceUsage to ServerStatus and add uptime stuff to daemon server db model
